# Voice_Agent

./: .env  .env.example  .gitignore  README.md  pyproject.toml
app/: main.py  seed_db.py
app/api/: deps.py  webrtc.py
app/api/v1/: router.py
app/api/v1/endpoints/: websocket.py
app/core/: config.py  logger.py  logging.py
app/models/: schemas.py
app/services/: agent.py  db_service.py  llm.py  llm_service.py  router.py  stt.py  stt_service.py  tts.py  tts_service.py  vision_service.py
app/static/: index.html
app/utils/: connections
